--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -77,8 +77,17 @@
 #latestReleases .releaseCover {
   display: none;
 }
+
 #latestReleases .releasePreviewWrapper {
-  height: 150px;
+  height: auto;
+  margin: 0;
+  /* display: flex;
+  align-items: flex-start; */
+}
+
+.mediaPlayer {
+  margin-top: .5vh;
+  width: 100%;
 }
 
 .home {
@@ -88,7 +97,12 @@
   flex-flow: wrap;
 }
 
-@media only screen and (max-width: 1024px) {
+/* @media only screen and (max-width: 724px) {
+
+  }
+} */
+
+@media only screen and (max-width: 780px) {
   .home {
     display: flex;
     flex-wrap: wrap;
@@ -106,13 +120,6 @@
     width: 100%;
   }
 
-  #latestReleases .mediaPlayer {
-    width: 100%;
-    height: 30px;
-  }
-}
-
-@media only screen and (max-width: 780px) {
   .postPreview .postTitle {
     font-size: 4.75vw;
   }  
