--- a/src/containers/ReleasePreview/index.css
+++ b/src/containers/ReleasePreview/index.css
@@ -14,7 +14,7 @@
   align-items: flex-start;
   object-fit: scale-down;
   width: 100%;
-  margin-top: 2vh;
+  margin-top: 1vh;
   margin-right: 2vh;
   padding: 0;
 }
@@ -24,10 +24,6 @@
   max-width: 15vh;
   max-height: 15vh;
   margin-right: 1vh;
-}
-
-.mediaPlayer {
-  margin-top: 1vh;
 }
 
 .releasePreviewWrapper {  
@@ -52,10 +48,8 @@
     width: 50%;
     height: 10vh;
     display: flex;
-    margin-bottom: 1.5vh;
+    margin-bottom: 1vh;
   }
 
-  #latestReleases .releasePreviewWrapper {
-    width: 100%;
-  }
+
 }
